--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "mint-u",
   "private": true,
   "version": "0.1.0",
-  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.0",
     "@farcaster/miniapp-wagmi-connector": "^1.1.0",
@@ -14,7 +18,6 @@
     "viem": "^2.21.15",
     "wagmi": "^2.13.1"
   },
-{
   "devDependencies": {
     "typescript": "^5.6.3",
     "@types/react": "^18.3.5",
